--- a/html-boilerplate/index.html
+++ b/html-boilerplate/index.html
@@ -8,5 +8,20 @@
 
     <body>
         <h1>Hi world..</h1>
+        <p>im doing this again so i guess this is my refresher project</p>
+        <h2>heres a list of my top 3 favorite things</h2>
+        <ol>
+            <li>sully my boygirlfriend</li>
+            <li>video games</li>
+            <li>birds</li>
+        </ol>
+        <h2>and heres a list of my goals for this year</h2>
+        <ul>
+            <li>start exercising</li>
+            <li>save up some money and work towards moving out</li>
+            <li>be nicer and more patient with myself</li>
+            <li>learn programming for real this time, at least try my best</li>
+            <li>chill and learn to accept myself</li>
+        </ul>
     </body>
 </html>
