edit index.html make about.html add images and pages folder

--- a/html-boilerplate/index.html
+++ b/html-boilerplate/index.html
@@ -23,5 +23,8 @@
             <li>learn programming for real this time, at least try my best</li>
             <li>chill and learn to accept myself</li>
         </ul>
+        <a href="https://www.youtube.com/watch?v=Frazx5zxScE&ab_channel=EdwardD">click me >_<</a>
+        <a href="./pages/about.html">about me</a>
+        <img src="./images/doggg.jpg" alt="pug dog">
     </body>
 </html>
